<resources>
    <string name="app_name">Exdiary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>F


    <string name="listview_item">这个是listview_item中的文字、</string>
    <string name="nav_self">用户信息</string>
    <string name="nav_friend">好友日记</string>
    <string name="nav_mine">我的日记</string>F
    <string name="nav_noname">树洞</string>
    <string name="communicate">Communicate</string>
    <string name="setting">设置</string>F
    <string name="about">关于</string>
    <string name="login">VIP999</string>

    <string name="not_login">未登录</string>
    <string name="signature">来自计科C534作品、</string>

    <string name="test_time">今天 8:00</string>
    <string name="title_activity_redit">REditActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_friend">好友日记</string>
    <string name="title_activity_anonymous">AnonymousActivity</string>
</resources>
