<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_self"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_self" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_friend" />
        <item
            android:id="@+id/nav_mine"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_mine" />
        <item
            android:id="@+id/nav_noname"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_noname" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
